--- a/content/weeklies/2025-11-03.md
+++ b/content/weeklies/2025-11-03.md
@@ -61,11 +61,11 @@ draft: false
 
 ### vac:p2p:
 
-- `vac:p2p:ift:2025q4-nimlibp2p-quic:stabilization`
+- [`vac:p2p:ift:2025q4-nimlibp2p-quic:stabilization`](/p2p/ift/2025q4-nimlibp2p-quic#quic-stabilization)
   - Merged [PR 175](https://github.com/vacp2p/nim-quic/pull/175) and [PR 174](https://github.com/vacp2p/nim-quic/pull/174) and started a docker-compose harness for QUIC node testing.
-- `vac:p2p:ift:2025q4-nimlibp2p-cbindings:core`
+- [`vac:p2p:ift:2025q4-nimlibp2p-cbindings:core`](/p2p/ift/2025q4-nimlibp2p-cbindings#core-bindings)
   - Landed [PR 1820](https://github.com/vacp2p/nim-libp2p/pull/1820) adding libp2p threading and request handling to the C bindings.
-- `vac:p2p:ift:2025q4-nimlibp2p-maintenance:maintenance`
+- [`vac:p2p:ift:2025q4-nimlibp2p-maintenance:maintenance`](/p2p/ift/2025q4-nimlibp2p-maintenance#maintenance)
   - Advanced dependency and test hygiene across [PR 693](https://github.com/libp2p/test-plans/pull/693), [PR 1803](https://github.com/vacp2p/nim-libp2p/pull/1803), [PR 1810](https://github.com/vacp2p/nim-libp2p/pull/1810), [PR 1817](https://github.com/vacp2p/nim-libp2p/pull/1817), [PR 1831](https://github.com/vacp2p/nim-libp2p/pull/1831), [PR 1828](https://github.com/vacp2p/nim-libp2p/pull/1828), [PR 1825](https://github.com/vacp2p/nim-libp2p/pull/1825), [PR 1824](https://github.com/vacp2p/nim-libp2p/pull/1824), [PR 1823](https://github.com/vacp2p/nim-libp2p/pull/1823), [PR 1819](https://github.com/vacp2p/nim-libp2p/pull/1819), [PR 1812](https://github.com/vacp2p/nim-libp2p/pull/1812), [PR 1807](https://github.com/vacp2p/nim-libp2p/pull/1807), [PR 1808](https://github.com/vacp2p/nim-libp2p/pull/1808), [PR 1809](https://github.com/vacp2p/nim-libp2p/pull/1809), [PR 1790](https://github.com/vacp2p/nim-libp2p/pull/1790), [PR 1685](https://github.com/vacp2p/nim-libp2p/pull/1685), [PR 173](https://github.com/vacp2p/nim-quic/pull/173), and [PR 172](https://github.com/vacp2p/nim-quic/pull/172).
 
 ### vac:tke:
@@ -90,87 +90,87 @@ draft: false
 
 ### vac:qa:
 
-- `vac:qa:waku:2025q4-waku-testing:maintenance`
+- [`vac:qa:waku:2025q4-waku-testing:maintenance`](/qa/waku/2025q4-waku-testing#maintenance)
   - Tested `harbor.status.im/wakuorg/nwaku:v0.37.0-rc.4` within the interop suite.
-- `vac:qa:waku:2025q4-rln-smart-contract-testing:property-based`
+- [`vac:qa:waku:2025q4-rln-smart-contract-testing:property-based`](/qa/waku/2025q4-rln-smart-contract-testing#property-based-fuzz-testing)
   - [PR 40: fuzz test expansion](https://github.com/waku-org/waku-rlnv2-contract/pull/40) remains in review to broaden RLN coverage.
-- `vac:qa:waku:2025q4-rln-smart-contract-testing:security-adversarial`
+- [`vac:qa:waku:2025q4-rln-smart-contract-testing:security-adversarial`](/qa/waku/2025q4-rln-smart-contract-testing#security-and-adversarial-testing)
   - [PR 42: adversarial tests](https://github.com/waku-org/waku-rlnv2-contract/pull/42) stayed under review while tracking [Issue 46](https://github.com/waku-org/waku-rlnv2-contract/issues/46) on grace-period membership.
   - Responded to the [PR 47 root storage cache comment](https://github.com/waku-org/waku-rlnv2-contract/pull/47#issuecomment-3471551678) to outline test expectations.
-- `vac:qa:vac:2025q4-nim-libp2p-testing:quic`
+- [`vac:qa:vac:2025q4-nim-libp2p-testing:quic`](/qa/vac/2025q4-nim-libp2p-testing#quic-protocol-testing)
   - Landed [PR 1793](https://github.com/vacp2p/nim-libp2p/pull/1793) and [PR 1816](https://github.com/vacp2p/nim-libp2p/pull/1816) while iterating on [PR 1829](https://github.com/vacp2p/nim-libp2p/pull/1829) and documenting EOF inconsistencies in [Issue 1833](https://github.com/vacp2p/nim-libp2p/issues/1833) and [Issue 1834](https://github.com/vacp2p/nim-libp2p/issues/1834).
-- `vac:qa:status:2025q4-status-qa-desktop:maintenance`
+- [`vac:qa:status:2025q4-status-qa-desktop:maintenance`](/qa/status/2025q4-status-qa-desktop#maintenance)
   - Shipped [PR 19146](https://github.com/status-im/status-desktop/pull/19146) for Windows wait timeouts, [PR 19165](https://github.com/status-im/status-desktop/pull/19165) for language change coverage, and continued [Issue 19173](https://github.com/status-im/status-desktop/issues/19173).
-- `vac:qa:status:2025q4-status-qa-desktop:release-testing`
+- [`vac:qa:status:2025q4-status-qa-desktop:release-testing`](/qa/status/2025q4-status-qa-desktop#release-testing)
   - Exercised release flows through [PR 19122](https://github.com/status-im/status-desktop/pull/19122), [PR 19152](https://github.com/status-im/status-desktop/pull/19152), and opened follow-up bugs [19154](https://github.com/status-im/status-desktop/issues/19154), [19167](https://github.com/status-im/status-desktop/issues/19167), [19174](https://github.com/status-im/status-desktop/issues/19174), and [19176](https://github.com/status-im/status-desktop/issues/19176).
-- `vac:qa:status:2025q4-status-qa-mobile:test-ci`
+- [`vac:qa:status:2025q4-status-qa-mobile:test-ci`](/qa/status/2025q4-status-qa-mobile#android-ci-workflow--test)
   - Advanced BrowserStack and Jenkins integration across [PR 19163](https://github.com/status-im/status-desktop/pull/19163), [PR 19114](https://github.com/status-im/status-desktop/pull/19114), [PR 19107](https://github.com/status-im/status-desktop/pull/19107), and [PR 19111](https://github.com/status-im/status-desktop/pull/19111).
-- `vac:qa:status:2025q4-status-qa-mobile:port-tests`
+- [`vac:qa:status:2025q4-status-qa-mobile:port-tests`](/qa/status/2025q4-status-qa-mobile#port-desktop-tests)
   - Prepared wallet add/remove account automation awaiting upstream dependencies.
 
 ### vac:dst:
 
-- `vac:dst:vac:2025q4-libp2p-evaluation:regression-testing`
+- [`vac:dst:vac:2025q4-libp2p-evaluation:regression-testing`](/dst/vac/2025q4-libp2p-evaluation#regression-testing-recurring)
   - Ran QUIC experiments, cross-checked go-libp2p behaviour, and documented findings in [Quic-9dc03f0e](https://www.notion.so/Quic-9dc03f0e-29b8f96fb65c8069a21bf0b2e5c14412?pvs=25) while coordinating with P2P.
 - `vac:dst:waku:2025q4-waku-scaling:twn-supports-rln-tree`
   - Finalised RLN deployment setup, analysed crash reports in [RLN issues](https://www.notion.so/RLN-issues-29d8f96fb65c8041967be722d496b4c0), and opened [PR 166](https://github.com/vacp2p/10ksim/pull/166) as a draft.
-- `vac:dst:status:2025q4-status-evaluation:chat-protocol-benchmarks-followup`
+- [`vac:dst:status:2025q4-status-evaluation:chat-protocol-benchmarks-followup`](/dst/status/2025q4-status-evaluation#chat-protocol-benchmarks-followup)
   - Synced with Status on the bootstrap filter issue and next investigation steps.
-- `vac:dst:ift:2025q4-dst-tooling:complete-deployment-refactor`
+- [`vac:dst:ift:2025q4-dst-tooling:complete-deployment-refactor`](/dst/ift/2025q4-dst-tooling#complete-deployment-refactor)
   - Submitted [PR 168](https://github.com/vacp2p/10ksim/pull/168) and [PR 169](https://github.com/vacp2p/10ksim/pull/169) to refactor deployment classes and clean Helm templates.
-- `vac:dst:waku:2025q4-waku-scaling:optimise-browser-bootstrapping`
+- [`vac:dst:waku:2025q4-waku-scaling:optimise-browser-bootstrapping`](/dst/waku/2025q4-waku-scaling#optimise-browser-bootstrapping)
   - Deployed bootstrap, lightpush server, and client nodes; diagnosed Docker image regressions in [PR 170](https://github.com/vacp2p/10ksim/pull/170).
-- `vac:dst:ift:2025q4-dst-tooling:general-tooling`
+- [`vac:dst:ift:2025q4-dst-tooling:general-tooling`](/dst/ift/2025q4-dst-tooling#general-tooling-recurring)
   - Addressed review feedback on [PR 164](https://github.com/vacp2p/10ksim/pull/164).
-- `vac:dst:waku:2025q4-waku-evaluation:regression-testing`
+- [`vac:dst:waku:2025q4-waku-evaluation:regression-testing`](/dst/waku/2025q4-waku-evaluation#regression-testing-recurring)
   - Compared nwaku v0.37 with prior releases, flagging bandwidth spikes, memory usage, and missing relay receive logs in [nwaku regression testing - v0.37](https://www.notion.so/nwaku-regression-testing-v0-37-October-2025-29c8f96fb65c80de9314c66dd3698b69) and the [Discord thread](https://discord.com/channels/864066763682218004/1113778766657880127/1434819853621137478).
-- `vac:dst:vac:2025q4-libp2p-evaluation:rust-libp2p-node`
+- [`vac:dst:vac:2025q4-libp2p-evaluation:rust-libp2p-node`](/dst/vac/2025q4-libp2p-evaluation#rust-libp2p-node)
   - Integrated the Rust node into the test harness and continued repository onboarding.
 
 ### vac:sc:
 
-- `vac:sc:status-l2:2025q4-audit-preparation:review-documentation`
+- [`vac:sc:status-l2:2025q4-audit-preparation:review-documentation`](/sc/status-l2/2025q4-audit-preparation#review-and-update-existing-documentation)
   - Continued documentation passes, merged [PR 59](https://github.com/status-im/status-network-monorepo/pull/59), [PR 60](https://github.com/status-im/status-network-monorepo/pull/60), and [PR 61](https://github.com/status-im/status-network-monorepo/pull/61).
-- `vac:sc:status-l2:2025q4-pre-audit-protocol-enhancements:distributed-slashing`
+- [`vac:sc:status-l2:2025q4-pre-audit-protocol-enhancements:distributed-slashing`](/sc/status-l2/2025q4-pre-audit-protocol-enhancements#distributed-slashing-implementation)
   - Reviewed slashing race condition research and explored alternative mitigation designs.
-- `vac:sc:status-l2:2025q4-audit-preparation:organize-tests`
+- [`vac:sc:status-l2:2025q4-audit-preparation:organize-tests`](/sc/status-l2/2025q4-audit-preparation#organize-tests-by-unit-and-integration-categories)
   - Restructured StakeManager tests in [PR 58](https://github.com/status-im/status-network-monorepo/pull/58) to improve clarity.
 
 ### vac:acz:
 
-- `vac:acz:ift:2025q4-zerokit:ffi-rework`
+- [`vac:acz:ift:2025q4-zerokit:ffi-rework`](/acz/ift/2025q4-zerokit#ffi-re-work)
   - Kept [PR 337](https://github.com/vacp2p/zerokit/pull/337) in progress, documented FFI usage, and split wasm changes into a follow-up.
-- `vac:acz:ift:2025q4-zerokit:wasm-ffi-rework`
+- [`vac:acz:ift:2025q4-zerokit:wasm-ffi-rework`](/acz/ift/2025q4-zerokit#wasm-ffi-rework)
   - Continued [PR 352](https://github.com/vacp2p/zerokit/pull/352) with the new `rln-wasm-utils` implementation and experiments on the wasm port.
-- `vac:acz:ift:2025q4-zerokit:zerokit-maintaining`
+- [`vac:acz:ift:2025q4-zerokit:zerokit-maintaining`](/acz/ift/2025q4-zerokit#zerokit-maintaining)
   - Patched parallel test failures via [commit a198960](https://github.com/vacp2p/zerokit/commit/a198960cf3e73dd3da5e8fd25c96f74e558eee48) and merged [PR 349](https://github.com/vacp2p/zerokit/pull/349) to trim `ruint` sub-dependencies.
-- `vac:acz:ift:2025q4-rln-status-l2:maintaining`
+- [`vac:acz:ift:2025q4-rln-status-l2:maintaining`](/acz/ift/2025q4-rln-status-l2#prover-module-maintaining)
   - Reviewed the [Tx Quota doc](https://www.notion.so/PRD-Status-Network-Hub-Tx-Quota-Widget-Read-API-2968f96fb65c80a681d2de1d15d77408) for context.
 - `vac:acz:ift:2025q4-rln-spec-final`
   - Updated prover spec notes within the [RLN deployment spec](https://www.notion.so/RLN-Deployment-Spec-1f98f96fb65c806c8737d94851b4d14d#2948f96fb65c8072be90e12afb262486).
-- `vac:acz:ift:2025q4-rln-status-l2:shared-db`
+- [`vac:acz:ift:2025q4-rln-status-l2:shared-db`](/acz/ift/2025q4-rln-status-l2#multi-prover-with-shared-database)
   - Prototyped the shared DB in a private repo using sea_orm and PostgreSQL hstore.
 - `vac:acz:ift:2025q4-discovery:draft-rfc`
   - Refined distance logic, expanded the discovery PoC tests in [PR 1](https://github.com/vacp2p/logos-capability-discovery-poc/pull/1), and drafted the [VAC forum post](https://www.notion.so/Draft-Vac-forum-post-for-Logos-Discovery-Capability-RFC-29a8f96fb65c8093bebadf300f34188e).
-- `vac:acz:ift:2025q4-de-mls-tesnet:multi-steward-rfc`
+- [`vac:acz:ift:2025q4-de-mls-tesnet:multi-steward-rfc`](/acz/ift/2025q4-de-mls-testnet#maintain-de-mls-rfc-with-multi-stewards)
   - Addressed reviewer feedback in [PR 193](https://github.com/vacp2p/rfc-index/pull/193) for multi-steward support.
-- `vac:acz:ift:2025q4-rln-status-l2:rln-public-website`
+- [`vac:acz:ift:2025q4-rln-status-l2:rln-public-website`](/acz/ift/2025q4-rln-status-l2#rln-public-website)
   - Finalised the [RLN public website draft](https://www.notion.so/Rate-Limiting-Nullifier-RLN-28d8f96fb65c80ab8faef0a72c2836c6).
 
 ### vac:rfc:
 
-- `vac:rfc:codex:2025q4-rfc-iteration:slot-builder`
+- [`vac:rfc:codex:2025q4-rfc-iteration:slot-builder`](/rfc/codex/2025q4-rfc-iteration#slot-builder)
   - Continued drafting with a first version targeted for next week.
-- `vac:rfc:codex:2025q4-rfc-iteration:store`
+- [`vac:rfc:codex:2025q4-rfc-iteration:store`](/rfc/codex/2025q4-rfc-iteration#store-module)
   - Extended the store RFC and opened [PR 207](https://github.com/vacp2p/rfc-index/pull/207) for review.
-- `vac:rfc:codex:2025q4-rfc-iteration:marketplace`
+- [`vac:rfc:codex:2025q4-rfc-iteration:marketplace`](/rfc/codex/2025q4-rfc-iteration#marketplace-module)
   - Progressed marketplace Phase 2 and submitted [PR 208](https://github.com/vacp2p/rfc-index/pull/208); noted future modules for purchase and sales flows.
 
 ### vac:nim:
 
-- `vac:nim:ift:2025q4-nimble:nimble-1.0.0`
+- [`vac:nim:ift:2025q4-nimble:nimble-1.0.0`](/nim/ift/2025q4-nimble#nimble-100)
   - Merged [PR 1507](https://github.com/nim-lang/nimble/pull/1507), [PR 1506](https://github.com/nim-lang/nimble/pull/1506), [PR 1505](https://github.com/nim-lang/nimble/pull/1505), and [PR 1503](https://github.com/nim-lang/nimble/pull/1503) to optimise nimblesat tooling, conditional imports, recursive instrumentation, and setup execution.
-- `vac:nim:ift:2025q4-nim-core-libs:command-line-parsers`
+- [`vac:nim:ift:2025q4-nim-core-libs:command-line-parsers`](/nim/ift/2025q4-nim-core-libs#command-line-parsers)
   - Advanced option flattening via [PR 118](https://github.com/status-im/nim-confutils/pull/118) while referencing follow-up Issue 114.
 
 ### vac:sec:
@@ -212,26 +212,26 @@ draft: false
 
 ### vac:web:
 
-- `vac:web:ift:2025q4-maintenance:maintenance`
+- [`vac:web:ift:2025q4-maintenance:maintenance`](/web/ift/2025q4-maintenance#maintenance)
   - Traced Cloudinary overages and gathered Cats Fishing requirements.
   - Delivered Devconnect 2025 landing updates ([PR 92](https://github.com/acid-info/logos.co/pull/92), [PR 90](https://github.com/acid-info/logos.co/pull/90)), refreshed event metadata ([PR 91](https://github.com/acid-info/logos.co/pull/91)), and handled the PSF PSC migration ([PR 8](https://github.com/acid-info/psf.logos.co/pull/8)).
-- `vac:web:ift:2025q4-logos-website:external-references`
+- [`vac:web:ift:2025q4-logos-website:external-references`](/web/ift/2025q4-logos-website#external-references)
   - Reviewed agency proposals, organised the pre-signing meeting, and drafted tech guidelines.
-- `vac:web:status:2025q4-status-app:upgrade-waku`
+- [`vac:web:status:2025q4-status-app:upgrade-waku`](/web/status/2025q4-status-app#upgrade-waku)
   - Prepared the mobile release via [PR 1620](https://github.com/status-im/status-website/pull/1620).
-- `vac:web:status:2025q4-sn-hub:karma`
+- [`vac:web:status:2025q4-sn-hub:karma`](/web/status/2025q4-sn-hub#karma)
   - Scoped requirements and accelerated the release timeline.
 - `admin/misc`
   - OOO: 3 CC days.
-- `vac:web:status:2025q4-sn-hub:discovery`
+- [`vac:web:status:2025q4-sn-hub:discovery`](/web/status/2025q4-sn-hub#discovery)
   - Lined up merge-ready PRs for [Discover section](https://github.com/status-im/status-web/pull/808), [External links](https://github.com/status-im/status-web/pull/818), and [Withdraw](https://github.com/status-im/status-web/pull/813).
-- `vac:web:keycard:2025q4-keycard-website:i18n`
+- [`vac:web:keycard:2025q4-keycard-website:i18n`](/web/keycard/2025q4-keycard-website#i18n)
   - Merged [PR 123](https://github.com/keycard-tech/keycard-website/pull/123) and [PR 116](https://github.com/keycard-tech/keycard-website/pull/116) for footer and wallets updates.
-- `vac:web:ift:2025q4-logos-website:spaces-calendar`
+- [`vac:web:ift:2025q4-logos-website:spaces-calendar`](/web/ift/2025q4-logos-website#spaces-calendar)
   - Built Spaces Calendar and Circles map integrations with data import, pagination, and visual previews via [PR 21](https://github.com/acid-info/admin-acid.logos.co/pull/21), [PR 16](https://github.com/acid-info/logos-co/pull/16), and [PR 15](https://github.com/acid-info/logos-co/pull/15).
-- `vac:web:status:2025q4-status-website:i18n`
+- [`vac:web:status:2025q4-status-website:i18n`](/web/status/2025q4-status-website#i18n)
   - Proofread Korean translations and proposed i18n handling improvements.
-- `vac:web:status:2025q4-sn-hub:staking`
+- [`vac:web:status:2025q4-sn-hub:staking`](/web/status/2025q4-sn-hub#staking)
   - Finalised auth, fixed staking/unstaking flows, and started the karma implementation.
 
 ### vac:infra:
@@ -276,13 +276,13 @@ draft: false
 
 ### vac:bi:
 
-- `vac:bi:ift:2025q4-ift-townhall-content-helper`
+- [`vac:bi:ift:2025q4-ift-townhall-content-helper`](/bi/ift/2025q4-ift-townhall-helper#prepare-media-and-content-list-for-each-townhall)
   - Townhall presentation.
-- `vac:bi:ift:2025q4-comms-discord-stats`
+- [`vac:bi:ift:2025q4-comms-discord-stats`](/bi/ift/2025q4-comms-discord-stats#channel-analytics-delivery)
   - Finalize Logos dashboard.
 - `vac:bi:ift:2025q4-vac-website`
   - Provide API for circle data to new logos.co website.
-- `vac:bi:rag:2025q4-rag-evaluation-pipeline`
+- [`vac:bi:rag:2025q4-rag-evaluation-pipeline`](/bi/rag/2025q4-rag-evaluation#setup-an-evaluation-process)
   - Dashboard for monitoring.
 - `vac:bi:rag:2025q4-rag-context`
   - Issues with Qdrant and new Ollama version.
