--- a/content/weeklies/2025-11-17.md
+++ b/content/weeklies/2025-11-17.md
@@ -49,6 +49,8 @@ draft: false
 - Nescience: AMM program implementation underway with tests pending.
 - Nescience: Light-user design review progressing with ACZ collaboration.
 - Nescience: Oleksandr returning from sick leave to pick up backlog issues.
+- TKE: Funding the Commons voting workshop app in active development ahead of Devconnect.
+- TKE: CF change report, optimal control research all progressed in parallel.
 
 ### vac:qa:
 - [`vac:qa:waku:2025q4-rln-smart-contract-testing:security-adversarial`](/qa/waku/2025q4-rln-smart-contract-testing#security-and-adversarial-testing)
@@ -226,3 +228,31 @@ draft: false
   - Evaluated privacy patterns for NSSA v0.2.
 - [`vac:acz:nes:2025q4-nescience-consulting:light-users`](/acz/nes/2025q4-nescience-consulting.md)
   - Drafted light-user support doc.
+
+### vac:bi:
+- `vac:bi:ift:2025q4-ift-finance-reporting`
+  - Working on the creating report of Wallet balances and activities.
+- `vac:bi:rag:2025q4-rag-context`
+  - Fixing embedding issues
+- `vac:bi:rag:2025q4-rag-evaluation-pipeline`
+  - Improving dashboard with Chunks data.
+- `vac:bi:logos:2025q4-logos-circle-dashboard`
+  - Update discord data extraction with the merging of Channels to one.
+  - researching on how to get participant location (https://github.com/status-im/data-docs/issues/121)
+- `vac:bi:ift:2025q4-comms-discord-stats`
+  - Updating extraction to add total server member info
+- `vac:bi:rag:2025q4-rag-mcp`
+  - Working on PoC
+
+### vac:tke:
+- `admin`
+    - OOO: 6 CC days.
+    - All Hands travel and Devconnect schedule planning
+- `vac:tke:ift:tokenomics-research-forum:voting-workshop`
+    - Built the voting app for the Funding the Commons workshop @ Devconnect
+- `vac:tke:status:cf`
+    - Wrote report on proposed changes for CF
+- `vac:tke:ift:tokenomics-research-forum::control`
+    - Continued optimal control research
+- `vac:tke:ift:support-to-ift-units::price-prediction`
+    - Iterated on price-prediction work based on Finance feedback
