--- a/content/weeklies/2025-12-01.md
+++ b/content/weeklies/2025-12-01.md
@@ -66,13 +66,13 @@ draft: false
 - Nescience: Wallet CLI refactors, personalization, and size-limit investigations queued; native token exploit documented.
 
 ### vac:qa:
-- `status:2025q4-status-go-functional-testing:wallet`
+- [`vac:qa:status:2025q4-status-go-functional-testing:wallet`](/qa/status/2025q4-status-go-functional-testing#wallet-features)
   - [test: Token gated communities](https://github.com/status-im/status-go/pull/7113) in review.
   - [test: Token gated communities - TC 7128](https://github.com/status-im/status-go/pull/7144) opened for review.
   - [No stopMessenger equivalent implemented for the public API](https://github.com/status-im/status-go/issues/7139) tracked.
   - [Signal and backend state inconsistency before accept_request_to_join_community call](https://github.com/status-im/status-go/issues/7161) under investigation.
   - [test: replace usage of close status backend containers with backend new profile fixture approach](https://github.com/status-im/status-go/pull/7162) in review.
-- `vac:2025q4-nim-libp2p-testing:flaky-tests`
+- [`vac:qa:vac:2025q4-nim-libp2p-testing:flaky-tests`](/qa/vac/2025q4-nim-libp2p-testing#flaky-test-fixes)
   - [test(coverage): ignore tests](https://github.com/vacp2p/nim-libp2p/pull/1922) in review alongside logging, dynamic import, and test reorganisation PRs.
   - Merged test reporting and file organisation updates across PRs 1911–1914.
 - [`vac:qa:status:2025q4-status-qa-desktop:maintenance`](/qa/status/2025q4-status-qa-desktop#maintenance)
@@ -84,7 +84,7 @@ draft: false
   - Continued release coverage.
 - [`vac:qa:status:2025q4-status-qa-mobile:multi-device-support`](/qa/status/2025q4-status-qa-mobile#multi-device-support--parallel-sessions)
   - Continued multi-device support and ported desktop tests ([status-im/status-desktop#19239](https://github.com/status-im/status-desktop/pull/19239), [19310](https://github.com/status-im/status-desktop/pull/19310)).
-- `status:2025q4-status-qa-mobile:release-testing`
+- [`vac:qa:status:2025q4-status-qa-mobile:release-testing`](/qa/status/2025q4-status-qa-mobile#release-testing)
   - Tracked Android 14 account creation issue [19318](https://github.com/status-im/status-desktop/issues/19318).
 
 ### vac:dst:
