chore: fix dst links in last monthly

--- a/content/monthly/2025-10.md
+++ b/content/monthly/2025-10.md
@@ -53,10 +53,9 @@ draft: false
 - Diagnosed Status–nwaku configuration blockers, coordinating triage with partner teams.
 - Progressed RLN deployment prep, capturing crash reports and shaping Waku investigation follow-ups.
 - Refactored 10ksim deployment tooling with builder classes, Python YAML generation, and async publish fixes ([vacp2p/10ksim#143](https://github.com/vacp2p/10ksim/pull/143), [#144](https://github.com/vacp2p/10ksim/pull/144), [#168](https://github.com/vacp2p/10ksim/pull/168), [#169](https://github.com/vacp2p/10ksim/pull/169)).
-- Verified js-waku lightpush on Kubernetes via updated experiments and the shared analysis in [vacp2p/research#206](https://github.com/vacp2p/research/pull/206).
-- Published the nim-libp2p v1.13 regression report and mixnet findings for downstream consumers.
+- Verified js-waku lightpush on Kubernetes via updated experiments.
 - Migrated Nomos compose setups to Kubernetes, unlocking first decentralised deployment runs ([vacp2p/10ksim#145](https://github.com/vacp2p/10ksim/pull/145)).
-- Enhanced interop scripts with Grafana monitoring, stress scenarios, and Sonda debugging across lite protocol tests ([waku-org/waku-interop-tests#135](https://github.com/waku-org/waku-interop-tests/pull/135), [#136](https://github.com/waku-org/waku-interop-tests/pull/136), [#137](https://github.com/waku-org/waku-interop-tests/pull/137), [#138](https://github.com/waku-org/waku-interop-tests/pull/138)).
+- Enhanced interop scripts with Grafana monitoring, stress scenarios, and Sonda debugging.
 - Maintained mix integration in DST nodes by removing cron tasks, adding HTTP endpoints, and supporting shadow simulations ([vacp2p/10ksim#139](https://github.com/vacp2p/10ksim/pull/139), [vacp2p/dst-libp2p-test-node#3](https://github.com/vacp2p/dst-libp2p-test-node/pull/3)).
 - Investigated mix exit-node slot exhaustion and coordinated exit==destination adjustments with P2P teams.
 - Submitted a suite of status-benchmarks PRs to exercise relay, light, and messaging workflows ([vacp2p/status-benchmarks#17](https://github.com/vacp2p/status-benchmarks/pull/17), [#21](https://github.com/vacp2p/status-benchmarks/pull/21), [#25](https://github.com/vacp2p/status-benchmarks/pull/25), [#31](https://github.com/vacp2p/status-benchmarks/pull/31)).
